monitoring/grafana/overlays/oci/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
spec:
  template:
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: grafana-storage
