monitoring/grafana/overlays/oci/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  labels:
    environment: oci
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.64bit.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
